# lab_thread

./: README.md
Solution/Main/data/: file1.txt  file2.txt
Sources/Main/: CMakeLists.txt  main.cpp  thread_pool.cpp  thread_pool.h
